Fix Reaction pane on mobile(#2877)

--- a/app/assets/stylesheets/article-show.scss
+++ b/app/assets/stylesheets/article-show.scss
@@ -848,7 +848,7 @@ article {
 
   .article-actions {
     text-align: center;
-    padding: 5px 0 12px;
+    padding: 8px 0;
     position: fixed;
     bottom: 0;
     z-index: 22;
